fix: final changes for deployment config and minor fixes for structure

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -40,6 +40,7 @@ body {
   }
 
   .brandon-grotesque {
+    font-family: HvDTrial Brandon Grotesque, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', 'Liberation Sans', sans-serif !important;
     * {
       font-family: HvDTrial Brandon Grotesque, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', 'Liberation Sans', sans-serif !important;
     }
