--- a/src/pages/globals.scss
+++ b/src/pages/globals.scss
@@ -40,7 +40,7 @@ body {
     right: 0;
     bottom: 0;
     left: 0;
-    background-image: url('/images/background.png');
+    background-image: url('../../public/images/background.png');
     opacity: 0.3;
     z-index: -1;
     mix-blend-mode: multiply;
