--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -17,22 +17,7 @@
 }
 
 * {
-  font-family: 'Recoleta';
-}
-
-.custom-shadow {
-  position: relative;
-
-  &::before {
-    content: "4🫨4";
-    position: absolute;
-    top: 9px;
-    left: 3px;
-    width: 100%;
-    z-index: -1;
-    color: #444; /* Shadow color */
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6); /* Adjust shadow properties as needed */
-  }
+  font-family: 'HvDTrial Brandon Grotesque';
 }
 
 body {
@@ -43,10 +28,6 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-
-  .background-layer {
-    position: relative;
-  }
 
   .background-layer::before {
     content: "";
@@ -62,9 +43,9 @@ body {
   }
 
   .gurmukhi {
-    font-family: 'Baloo Paaji 2';
+    font-family: 'Baloo Paaji 2' !important;
     * {
-      font-family: 'Baloo Paaji 2';
+      font-family: 'Baloo Paaji 2' !important;
     }
   }
 
@@ -73,6 +54,24 @@ body {
     * {
       font-family: 'HvDTrial Brandon Grotesque' !important;
     }
+  }
+
+  .card-bg::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url('../../public/images/card.png');
+    mix-blend-mode: screen;
+    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.1);
+  }
+
+  .card-bg {
+    position: relative;
   }
 
   .recoleta {
@@ -132,6 +131,7 @@ body {
   header {
     .title {
       font-size: 1.5rem;
+      font-family: 'Recoleta' !important;
       color: #1F4860;
     }
   }
@@ -142,6 +142,37 @@ body {
 
   .fade-to-complete {
     animation: fadeIn 0.5s ease-in-out;
+  }
+
+  @keyframes jump {
+    0%, 20%, 50%, 80%, 100% {
+      transform: translateY(0);
+    }
+    40% {
+      transform: translateY(-30px);
+    }
+    60% {
+      transform: translateY(-15px);
+    }
+  }
+
+  /* Define a keyframe animation */
+  @keyframes shake {
+    0%, 100% {
+      transform: translateX(0) rotate(0deg);
+    }
+    10%, 30%, 50%, 70%, 90% {
+      transform: rotate(-5deg);
+    }
+    20%, 40%, 60%, 80% {
+      transform: rotate(5deg);
+    }
+  }
+
+  
+  .jump-box {
+    position: relative;
+    animation: shake 2s infinite ease-in-out;
   }
 
   .level {
@@ -159,4 +190,15 @@ body {
       }
     }
   }
+
+  @keyframes fadeIn {
+    0% {
+      opacity: 1;
+      background-image: url('../../public/images/card.png');
+    }
+    100% {
+      opacity: 1;
+      background-image: url('../../public/images/card.png'); }
+  }
+  
 }
