--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -560,8 +560,18 @@ video {
 .top-\[4px\] {
   top: 4px;
 }
+.z-0 {
+  z-index: 0;
+}
 .z-10 {
   z-index: 10;
+}
+.m-4 {
+  margin: 1rem;
+}
+.mx-5 {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
 }
 .mx-8 {
   margin-left: 2rem;
@@ -570,6 +580,14 @@ video {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 .mb-2 {
   margin-bottom: 0.5rem;
@@ -613,6 +631,9 @@ video {
 .inline-flex {
   display: inline-flex;
 }
+.grid {
+  display: grid;
+}
 .h-10 {
   height: 2.5rem;
 }
@@ -646,6 +667,9 @@ video {
 .h-8 {
   height: 2rem;
 }
+.h-80 {
+  height: 20rem;
+}
 .h-\[1px\] {
   height: 1px;
 }
@@ -655,6 +679,9 @@ video {
 .h-full {
   height: 100%;
 }
+.h-min {
+  height: min-content;
+}
 .h-screen {
   height: 100vh;
 }
@@ -663,6 +690,9 @@ video {
 }
 .w-1\/2 {
   width: 50%;
+}
+.w-1\/3 {
+  width: 33.333333%;
 }
 .w-1\/4 {
   width: 25%;
@@ -713,6 +743,9 @@ video {
 .w-full {
   width: 100%;
 }
+.w-max {
+  width: max-content;
+}
 .w-screen {
   width: 100vw;
 }
@@ -750,6 +783,9 @@ video {
 }
 .cursor-pointer {
   cursor: pointer;
+}
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 .flex-row {
   flex-direction: row;
@@ -815,6 +851,10 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
+.bg-\[\#1F4860\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 72 96 / var(--tw-bg-opacity));
+}
 .bg-\[\#31D95E\] {
   --tw-bg-opacity: 1;
   background-color: rgb(49 217 94 / var(--tw-bg-opacity));
@@ -826,6 +866,14 @@ video {
 .bg-gray-eee {
   --tw-bg-opacity: 1;
   background-color: rgb(238 238 238 / var(--tw-bg-opacity));
+}
+.bg-green-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 .bg-slate-100\/75 {
   background-color: rgb(241 245 249 / 0.75);
@@ -948,6 +996,10 @@ video {
   font-size: 3rem;
   line-height: 1;
 }
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
+}
 .text-\[1\.125rem\] {
   font-size: 1.125rem;
 }
@@ -972,6 +1024,9 @@ video {
 }
 .font-medium {
   font-weight: 500;
+}
+.font-normal {
+  font-weight: 400;
 }
 .italic {
   font-style: italic;
@@ -1042,6 +1097,9 @@ video {
   --tw-drop-shadow: drop-shadow(0 4px 15px #fbbc054d);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
 .transition {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
@@ -1079,21 +1137,8 @@ video {
   }
 }
 * {
-  font-family: 'Recoleta';
+  font-family: 'HvDTrial Brandon Grotesque';
 }
-.custom-shadow {
-  position: relative;
-}
-.custom-shadow::before {
-    content: "4🫨4";
-    position: absolute;
-    top: 9px;
-    left: 3px;
-    width: 100%;
-    z-index: -1;
-    color: #444; /* Shadow color */
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6); /* Adjust shadow properties as needed */
-  }
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
@@ -1102,10 +1147,8 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  
 }
-body .background-layer {
-    position: relative;
-  }
 body .background-layer::before {
     content: "";
     position: absolute;
@@ -1119,10 +1162,10 @@ body .background-layer::before {
     mix-blend-mode: multiply;
   }
 body .gurmukhi {
-    font-family: 'Baloo Paaji 2';
+    font-family: 'Baloo Paaji 2' !important;
   }
 body .gurmukhi * {
-      font-family: 'Baloo Paaji 2';
+      font-family: 'Baloo Paaji 2' !important;
     }
 body .brandon-grotesque {
     font-family: 'HvDTrial Brandon Grotesque' !important;
@@ -1130,6 +1173,22 @@ body .brandon-grotesque {
 body .brandon-grotesque * {
       font-family: 'HvDTrial Brandon Grotesque' !important;
     }
+body .card-bg::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url('../../public/images/card.png');
+    mix-blend-mode: screen;
+    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.1);
+  }
+body .card-bg {
+    position: relative;
+  }
 body .recoleta {
     font-family: 'Recoleta';
   }
@@ -1172,6 +1231,7 @@ body .fs-rem-2 {
   }
 body header .title {
       font-size: 1.5rem;
+      font-family: 'Recoleta' !important;
       color: #1F4860;
     }
 body #sortbox:checked ~ #sortboxmenu {
@@ -1179,6 +1239,38 @@ body #sortbox:checked ~ #sortboxmenu {
   }
 body .fade-to-complete {
     animation: fadeIn 0.5s ease-in-out;
+  }
+body {
+
+  @keyframes jump {
+    0%, 20%, 50%, 80%, 100% {
+      transform: translateY(0);
+    }
+    40% {
+      transform: translateY(-30px);
+    }
+    60% {
+      transform: translateY(-15px);
+    }
+  }
+
+  /* Define a keyframe animation */
+  @keyframes shake {
+    0%, 100% {
+      transform: translateX(0) rotate(0deg);
+    }
+    10%, 30%, 50%, 70%, 90% {
+      transform: rotate(-5deg);
+    }
+    20%, 40%, 60%, 80% {
+      transform: rotate(5deg);
+    }
+  }
+  
+}
+body .jump-box {
+    position: relative;
+    animation: shake 2s infinite ease-in-out;
   }
 body -completed.level:hover {
         cursor: pointer;
@@ -1188,6 +1280,19 @@ body -current.level:hover {
         cursor: pointer;
         filter: drop-shadow(0 4px 15px #0567fbe6);
       }
+body {
+
+  @keyframes fadeIn {
+    0% {
+      opacity: 1;
+      background-image: url('../../public/images/card.png');
+    }
+    100% {
+      opacity: 1;
+      background-image: url('../../public/images/card.png'); }
+  }
+  
+}
 .hover\:bg-gray-200:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
