--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -566,6 +566,9 @@ video {
 .z-10 {
   z-index: 10;
 }
+.m-2 {
+  margin: 0.5rem;
+}
 .m-4 {
   margin: 1rem;
 }
@@ -616,6 +619,9 @@ video {
 .mr-4 {
   margin-right: 1rem;
 }
+.ms-2 {
+  margin-inline-start: 0.5rem;
+}
 .mt-4 {
   margin-top: 1rem;
 }
@@ -664,6 +670,9 @@ video {
 .h-6 {
   height: 1.5rem;
 }
+.h-64 {
+  height: 16rem;
+}
 .h-8 {
   height: 2rem;
 }
@@ -675,6 +684,10 @@ video {
 }
 .h-\[296px\] {
   height: 296px;
+}
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
 }
 .h-full {
   height: 100%;
@@ -709,17 +722,26 @@ video {
 .w-2 {
   width: 0.5rem;
 }
+.w-2\/5 {
+  width: 40%;
+}
 .w-24 {
   width: 6rem;
 }
 .w-3 {
   width: 0.75rem;
 }
+.w-3\/4 {
+  width: 75%;
+}
 .w-3\/5 {
   width: 60%;
 }
 .w-4 {
   width: 1rem;
+}
+.w-4\/5 {
+  width: 80%;
 }
 .w-6 {
   width: 1.5rem;
@@ -784,6 +806,9 @@ video {
 .cursor-pointer {
   cursor: pointer;
 }
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
@@ -819,6 +844,9 @@ video {
 }
 .gap-5 {
   gap: 1.25rem;
+}
+.gap-6 {
+  gap: 1.5rem;
 }
 .overflow-hidden {
   overflow: hidden;
@@ -1181,7 +1209,7 @@ body .card-bg::after {
     bottom: 0;
     left: 0;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     background-image: url('../../public/images/card.png');
     mix-blend-mode: screen;
     box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.1);
