--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -670,14 +670,17 @@ video {
 .h-6 {
   height: 1.5rem;
 }
+.h-60 {
+  height: 15rem;
+}
 .h-64 {
   height: 16rem;
 }
+.h-72 {
+  height: 18rem;
+}
 .h-8 {
   height: 2rem;
-}
-.h-80 {
-  height: 20rem;
 }
 .h-\[1px\] {
   height: 1px;
@@ -703,9 +706,6 @@ video {
 }
 .w-1\/2 {
   width: 50%;
-}
-.w-1\/3 {
-  width: 33.333333%;
 }
 .w-1\/4 {
   width: 25%;
@@ -749,8 +749,14 @@ video {
 .w-60 {
   width: 15rem;
 }
+.w-72 {
+  width: 18rem;
+}
 .w-8 {
   width: 2rem;
+}
+.w-80 {
+  width: 20rem;
 }
 .w-\[45rem\] {
   width: 45rem;
