--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -521,6 +521,9 @@ video {
 .relative {
   position: relative;
 }
+.inset-0 {
+  inset: 0px;
+}
 .inset-x-0 {
   left: 0px;
   right: 0px;
@@ -743,6 +746,9 @@ video {
 .w-4\/5 {
   width: 80%;
 }
+.w-48 {
+  width: 12rem;
+}
 .w-6 {
   width: 1.5rem;
 }
@@ -751,6 +757,9 @@ video {
 }
 .w-8 {
   width: 2rem;
+}
+.w-80 {
+  width: 20rem;
 }
 .w-\[45rem\] {
   width: 45rem;
@@ -890,6 +899,10 @@ video {
 .bg-\[\#D6E9F3\] {
   --tw-bg-opacity: 1;
   background-color: rgb(214 233 243 / var(--tw-bg-opacity));
+}
+.bg-darkBlue {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 72 96 / var(--tw-bg-opacity));
 }
 .bg-gray-eee {
   --tw-bg-opacity: 1;
@@ -1149,8 +1162,14 @@ video {
 .duration-200 {
   transition-duration: 200ms;
 }
+.duration-\[250ms\] {
+  transition-duration: 250ms;
+}
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.ease-out {
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -1333,6 +1352,9 @@ body {
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
+.group:hover .group-hover\:w-full {
+  width: 100%;
+}
 .group:hover .group-hover\:-rotate-180 {
   --tw-rotate: -180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1341,6 +1363,10 @@ body {
   --tw-scale-x: 1;
   --tw-scale-y: 1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.group:hover .group-hover\:text-white {
+  --tw-text-opacity: 1;
+  color: rgb(249 249 249 / var(--tw-text-opacity));
 }
 @media (min-width: 768px) {
 
