--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,6 +1,6 @@
-@import '~tailwindcss/base';
-@import '~tailwindcss/components';
-@import '~tailwindcss/utilities';
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -17,7 +17,7 @@
 }
 
 * {
-  font-family: 'Recoleta';
+  font-family: 'HvDTrial Brandon Grotesque';
 }
 
 body {
@@ -29,10 +29,6 @@ body {
     )
     rgb(var(--background-start-rgb));
 
-  .background-layer {
-    // position: relative;
-  }
-
   .background-layer::before {
     content: "";
     position: absolute;
@@ -40,16 +36,16 @@ body {
     right: 0;
     bottom: 0;
     left: 0;
-    background-image: url('/images/background.png');
+    background-image: url('../../public/images/background.png');
     opacity: 0.3;
     z-index: -1;
     mix-blend-mode: multiply;
   }
 
   .gurmukhi {
-    font-family: 'Baloo Paaji 2';
+    font-family: 'Baloo Paaji 2' !important;
     * {
-      font-family: 'Baloo Paaji 2';
+      font-family: 'Baloo Paaji 2' !important;
     }
   }
 
@@ -58,6 +54,24 @@ body {
     * {
       font-family: 'HvDTrial Brandon Grotesque' !important;
     }
+  }
+
+  .card-bg::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-image: url('../../public/images/card.png');
+    mix-blend-mode: screen;
+    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.1);
+  }
+
+  .card-bg {
+    position: relative;
   }
 
   .recoleta {
@@ -117,6 +131,7 @@ body {
   header {
     .title {
       font-size: 1.5rem;
+      font-family: 'Recoleta' !important;
       color: #1F4860;
     }
   }
@@ -127,6 +142,37 @@ body {
 
   .fade-to-complete {
     animation: fadeIn 0.5s ease-in-out;
+  }
+
+  @keyframes jump {
+    0%, 20%, 50%, 80%, 100% {
+      transform: translateY(0);
+    }
+    40% {
+      transform: translateY(-30px);
+    }
+    60% {
+      transform: translateY(-15px);
+    }
+  }
+
+  /* Define a keyframe animation */
+  @keyframes shake {
+    0%, 100% {
+      transform: translateX(0) rotate(0deg);
+    }
+    10%, 30%, 50%, 70%, 90% {
+      transform: rotate(-5deg);
+    }
+    20%, 40%, 60%, 80% {
+      transform: rotate(5deg);
+    }
+  }
+
+  
+  .jump-box {
+    position: relative;
+    animation: shake 2s infinite ease-in-out;
   }
 
   .level {
@@ -145,15 +191,14 @@ body {
     }
   }
 
-  // @keyframes fadeIn {
-  //   0% {
-  //     opacity: 1;
-  //     background-image: // some image 1 url;
-  //   }
-  //   100% {
-  //     opacity: 1;
-  //     background-image: // some image 2 url; }
-  // }
+  @keyframes fadeIn {
+    0% {
+      opacity: 1;
+      background-image: url('../../public/images/card.png');
+    }
+    100% {
+      opacity: 1;
+      background-image: url('../../public/images/card.png'); }
+  }
   
 }
-
