--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -560,8 +560,21 @@ video {
 .top-\[4px\] {
   top: 4px;
 }
+.z-0 {
+  z-index: 0;
+}
 .z-10 {
   z-index: 10;
+}
+.m-2 {
+  margin: 0.5rem;
+}
+.m-4 {
+  margin: 1rem;
+}
+.mx-5 {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
 }
 .mx-8 {
   margin-left: 2rem;
@@ -570,6 +583,14 @@ video {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 .mb-2 {
   margin-bottom: 0.5rem;
@@ -598,6 +619,9 @@ video {
 .mr-4 {
   margin-right: 1rem;
 }
+.ms-2 {
+  margin-inline-start: 0.5rem;
+}
 .mt-4 {
   margin-top: 1rem;
 }
@@ -612,6 +636,12 @@ video {
 }
 .inline-flex {
   display: inline-flex;
+}
+.grid {
+  display: grid;
+}
+.hidden {
+  display: none;
 }
 .h-10 {
   height: 2.5rem;
@@ -643,6 +673,15 @@ video {
 .h-6 {
   height: 1.5rem;
 }
+.h-60 {
+  height: 15rem;
+}
+.h-64 {
+  height: 16rem;
+}
+.h-72 {
+  height: 18rem;
+}
 .h-8 {
   height: 2rem;
 }
@@ -652,8 +691,15 @@ video {
 .h-\[296px\] {
   height: 296px;
 }
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
+}
 .h-full {
   height: 100%;
+}
+.h-min {
+  height: min-content;
 }
 .h-screen {
   height: 100vh;
@@ -679,11 +725,17 @@ video {
 .w-2 {
   width: 0.5rem;
 }
+.w-2\/5 {
+  width: 40%;
+}
 .w-24 {
   width: 6rem;
 }
 .w-3 {
   width: 0.75rem;
+}
+.w-3\/4 {
+  width: 75%;
 }
 .w-3\/5 {
   width: 60%;
@@ -691,14 +743,23 @@ video {
 .w-4 {
   width: 1rem;
 }
+.w-4\/5 {
+  width: 80%;
+}
 .w-6 {
   width: 1.5rem;
 }
 .w-60 {
   width: 15rem;
 }
+.w-72 {
+  width: 18rem;
+}
 .w-8 {
   width: 2rem;
+}
+.w-80 {
+  width: 20rem;
 }
 .w-\[45rem\] {
   width: 45rem;
@@ -712,6 +773,9 @@ video {
 }
 .w-full {
   width: 100%;
+}
+.w-max {
+  width: max-content;
 }
 .w-screen {
   width: 100vw;
@@ -751,6 +815,12 @@ video {
 .cursor-pointer {
   cursor: pointer;
 }
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
 .flex-row {
   flex-direction: row;
 }
@@ -784,6 +854,9 @@ video {
 .gap-5 {
   gap: 1.25rem;
 }
+.gap-6 {
+  gap: 1.5rem;
+}
 .overflow-hidden {
   overflow: hidden;
 }
@@ -815,6 +888,10 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
+.bg-\[\#1F4860\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 72 96 / var(--tw-bg-opacity));
+}
 .bg-\[\#31D95E\] {
   --tw-bg-opacity: 1;
   background-color: rgb(49 217 94 / var(--tw-bg-opacity));
@@ -826,6 +903,14 @@ video {
 .bg-gray-eee {
   --tw-bg-opacity: 1;
   background-color: rgb(238 238 238 / var(--tw-bg-opacity));
+}
+.bg-green-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 .bg-slate-100\/75 {
   background-color: rgb(241 245 249 / 0.75);
@@ -977,6 +1062,9 @@ video {
 .font-medium {
   font-weight: 500;
 }
+.font-normal {
+  font-weight: 400;
+}
 .italic {
   font-style: italic;
 }
@@ -1046,6 +1134,9 @@ video {
   --tw-drop-shadow: drop-shadow(0 4px 15px #fbbc054d);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
 .transition {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
@@ -1083,21 +1174,8 @@ video {
   }
 }
 * {
-  font-family: 'Recoleta';
+  font-family: 'HvDTrial Brandon Grotesque';
 }
-.custom-shadow {
-  position: relative;
-}
-.custom-shadow::before {
-    content: "4🫨4";
-    position: absolute;
-    top: 9px;
-    left: 3px;
-    width: 100%;
-    z-index: -1;
-    color: #444; /* Shadow color */
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6); /* Adjust shadow properties as needed */
-  }
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
@@ -1106,10 +1184,8 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  
 }
-body .background-layer {
-    position: relative;
-  }
 body .background-layer::before {
     content: "";
     position: absolute;
@@ -1123,10 +1199,10 @@ body .background-layer::before {
     mix-blend-mode: multiply;
   }
 body .gurmukhi {
-    font-family: 'Baloo Paaji 2';
+    font-family: 'Baloo Paaji 2' !important;
   }
 body .gurmukhi * {
-      font-family: 'Baloo Paaji 2';
+      font-family: 'Baloo Paaji 2' !important;
     }
 body .brandon-grotesque {
     font-family: 'HvDTrial Brandon Grotesque' !important;
@@ -1134,6 +1210,22 @@ body .brandon-grotesque {
 body .brandon-grotesque * {
       font-family: 'HvDTrial Brandon Grotesque' !important;
     }
+body .card-bg::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-image: url('../../public/images/card.png');
+    mix-blend-mode: screen;
+    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.1);
+  }
+body .card-bg {
+    position: relative;
+  }
 body .recoleta {
     font-family: 'Recoleta';
   }
@@ -1176,6 +1268,7 @@ body .fs-rem-2 {
   }
 body header .title {
       font-size: 1.5rem;
+      font-family: 'Recoleta' !important;
       color: #1F4860;
     }
 body #sortbox:checked ~ #sortboxmenu {
@@ -1183,6 +1276,38 @@ body #sortbox:checked ~ #sortboxmenu {
   }
 body .fade-to-complete {
     animation: fadeIn 0.5s ease-in-out;
+  }
+body {
+
+  @keyframes jump {
+    0%, 20%, 50%, 80%, 100% {
+      transform: translateY(0);
+    }
+    40% {
+      transform: translateY(-30px);
+    }
+    60% {
+      transform: translateY(-15px);
+    }
+  }
+
+  /* Define a keyframe animation */
+  @keyframes shake {
+    0%, 100% {
+      transform: translateX(0) rotate(0deg);
+    }
+    10%, 30%, 50%, 70%, 90% {
+      transform: rotate(-5deg);
+    }
+    20%, 40%, 60%, 80% {
+      transform: rotate(5deg);
+    }
+  }
+  
+}
+body .jump-box {
+    position: relative;
+    animation: shake 2s infinite ease-in-out;
   }
 body -completed.level:hover {
         cursor: pointer;
@@ -1192,6 +1317,19 @@ body -current.level:hover {
         cursor: pointer;
         filter: drop-shadow(0 4px 15px #0567fbe6);
       }
+body {
+
+  @keyframes fadeIn {
+    0% {
+      opacity: 1;
+      background-image: url('../../public/images/card.png');
+    }
+    100% {
+      opacity: 1;
+      background-image: url('../../public/images/card.png'); }
+  }
+  
+}
 .hover\:bg-gray-200:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
