--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -521,13 +521,12 @@ video {
 .relative {
   position: relative;
 }
+.sticky {
+  position: sticky;
+}
 .inset-x-0 {
   left: 0px;
   right: 0px;
-}
-.inset-x-6 {
-  left: 1.5rem;
-  right: 1.5rem;
 }
 .inset-y-0 {
   top: 0px;
@@ -541,6 +540,9 @@ video {
 }
 .bottom-0 {
   bottom: 0px;
+}
+.bottom-2 {
+  bottom: 0.5rem;
 }
 .left-\[4px\] {
   left: 4px;
@@ -566,6 +568,9 @@ video {
 .z-10 {
   z-index: 10;
 }
+.z-\[1\] {
+  z-index: 1;
+}
 .m-2 {
   margin: 0.5rem;
 }
@@ -583,6 +588,10 @@ video {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+.my-0 {
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 .my-10 {
   margin-top: 2.5rem;
@@ -622,6 +631,9 @@ video {
 .ms-2 {
   margin-inline-start: 0.5rem;
 }
+.ms-6 {
+  margin-inline-start: 1.5rem;
+}
 .mt-4 {
   margin-top: 1rem;
 }
@@ -648,9 +660,6 @@ video {
 }
 .h-12 {
   height: 3rem;
-}
-.h-16 {
-  height: 4rem;
 }
 .h-2 {
   height: 0.5rem;
@@ -698,6 +707,9 @@ video {
 .h-full {
   height: 100%;
 }
+.h-max {
+  height: max-content;
+}
 .h-min {
   height: min-content;
 }
@@ -710,6 +722,9 @@ video {
 .w-1\/2 {
   width: 50%;
 }
+.w-1\/3 {
+  width: 33.333333%;
+}
 .w-1\/4 {
   width: 25%;
 }
@@ -718,9 +733,6 @@ video {
 }
 .w-12 {
   width: 3rem;
-}
-.w-16 {
-  width: 4rem;
 }
 .w-2 {
   width: 0.5rem;
@@ -746,6 +758,9 @@ video {
 .w-4\/5 {
   width: 80%;
 }
+.w-52 {
+  width: 13rem;
+}
 .w-6 {
   width: 1.5rem;
 }
@@ -766,10 +781,6 @@ video {
 }
 .w-auto {
   width: auto;
-}
-.w-fit {
-  width: -moz-fit-content;
-  width: fit-content;
 }
 .w-full {
   width: 100%;
@@ -830,6 +841,9 @@ video {
 .items-center {
   align-items: center;
 }
+.justify-start {
+  justify-content: flex-start;
+}
 .justify-center {
   justify-content: center;
 }
@@ -884,9 +898,16 @@ video {
 .border {
   border-width: 1px;
 }
+.border-2 {
+  border-width: 2px;
+}
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+.border-sky-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(186 230 253 / var(--tw-border-opacity));
 }
 .bg-\[\#1F4860\] {
   --tw-bg-opacity: 1;
@@ -908,9 +929,21 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
 }
+.bg-lightGreen {
+  --tw-bg-opacity: 1;
+  background-color: rgb(175 240 192 / var(--tw-bg-opacity));
+}
+.bg-lightRed {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 168 168 / var(--tw-bg-opacity));
+}
 .bg-red-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+.bg-sky-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(224 242 254 / var(--tw-bg-opacity));
 }
 .bg-slate-100\/75 {
   background-color: rgb(241 245 249 / 0.75);
@@ -924,6 +957,15 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(249 249 249 / var(--tw-bg-opacity));
+}
+.bg-white-125 {
+  background-color: rgba(249, 249, 249, 0.25);
+}
+.bg-white-150 {
+  background-color: rgba(249, 249, 249, 0.5);
+}
+.bg-white-175 {
+  background-color: rgba(249, 249, 249, 0.75);
 }
 .bg-white\/\[\.1\] {
   background-color: rgb(249 249 249 / .1);
@@ -971,6 +1013,9 @@ video {
 .p-14 {
   padding: 3.5rem;
 }
+.p-3 {
+  padding: 0.75rem;
+}
 .p-4 {
   padding: 1rem;
 }
@@ -1014,6 +1059,12 @@ video {
 }
 .pr-3\.5 {
   padding-right: 0.875rem;
+}
+.ps-4 {
+  padding-inline-start: 1rem;
+}
+.ps-6 {
+  padding-inline-start: 1.5rem;
 }
 .text-left {
   text-align: left;
@@ -1065,6 +1116,12 @@ video {
 .font-normal {
   font-weight: 400;
 }
+.font-semibold {
+  font-weight: 600;
+}
+.uppercase {
+  text-transform: uppercase;
+}
 .italic {
   font-style: italic;
 }
@@ -1086,6 +1143,14 @@ video {
   --tw-text-opacity: 1;
   color: rgb(17 17 17 / var(--tw-text-opacity));
 }
+.text-brightRed {
+  --tw-text-opacity: 1;
+  color: rgb(197 30 30 / var(--tw-text-opacity));
+}
+.text-darkBlue {
+  --tw-text-opacity: 1;
+  color: rgb(31 72 96 / var(--tw-text-opacity));
+}
 .text-gray-400 {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
@@ -1093,6 +1158,14 @@ video {
 .text-gray-e4 {
   --tw-text-opacity: 1;
   color: rgb(78 78 78 / var(--tw-text-opacity));
+}
+.text-maroon {
+  --tw-text-opacity: 1;
+  color: rgb(99 5 5 / var(--tw-text-opacity));
+}
+.text-slate-500 {
+  --tw-text-opacity: 1;
+  color: rgb(100 116 139 / var(--tw-text-opacity));
 }
 .text-white {
   --tw-text-opacity: 1;
@@ -1107,6 +1180,9 @@ video {
 .opacity-75 {
   opacity: 0.75;
 }
+.bg-blend-soft-light {
+  background-blend-mode: soft-light;
+}
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
@@ -1116,6 +1192,23 @@ video {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-sm {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-green-500 {
+  --tw-shadow-color: #22c55e;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+.shadow-maroon {
+  --tw-shadow-color: #630505;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+.shadow-skyBlue {
+  --tw-shadow-color: #9CC9E2;
+  --tw-shadow: var(--tw-shadow-colored);
 }
 .outline-none {
   outline: 2px solid transparent;
@@ -1195,8 +1288,10 @@ body .background-layer::before {
     left: 0;
     background-image: url('../../public/images/background.png');
     opacity: 0.3;
-    z-index: -1;
     mix-blend-mode: multiply;
+  }
+body .cardImage{
+    background-image: url('../../public/images/card.png');
   }
 body .gurmukhi {
     font-family: 'Baloo Paaji 2' !important;
@@ -1330,6 +1425,15 @@ body {
   }
   
 }
+.hover\:relative:hover {
+  position: relative;
+}
+.hover\:bottom-0:hover {
+  bottom: 0px;
+}
+.hover\:bottom-2:hover {
+  bottom: 0.5rem;
+}
 .hover\:bg-gray-200:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
@@ -1337,6 +1441,9 @@ body {
 .hover\:bg-slate-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+}
+.hover\:bg-white-150:hover {
+  background-color: rgba(249, 249, 249, 0.5);
 }
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
