--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -34,6 +34,9 @@ body {
     z-index: -1;
     mix-blend-mode: multiply;
   }
+  .nanakback{
+    background-image: url('../../public/images/coinback.png');
+  }
 
   .gurmukhi {
     font-family: 'Baloo Paaji 2' !important;
