--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -608,8 +608,14 @@ video {
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
 .mb-2 {
   margin-bottom: 0.5rem;
+}
+.mb-20 {
+  margin-bottom: 5rem;
 }
 .mb-3 {
   margin-bottom: 0.75rem;
@@ -625,6 +631,9 @@ video {
 }
 .mb-7 {
   margin-bottom: 1.75rem;
+}
+.mb-8 {
+  margin-bottom: 2rem;
 }
 .ml-1 {
   margin-left: 0.25rem;
@@ -646,6 +655,9 @@ video {
 }
 .ms-6 {
   margin-inline-start: 1.5rem;
+}
+.mt-10 {
+  margin-top: 2.5rem;
 }
 .mt-4 {
   margin-top: 1rem;
@@ -743,6 +755,9 @@ video {
 }
 .w-1\/4 {
   width: 25%;
+}
+.w-1\/5 {
+  width: 20%;
 }
 .w-10 {
   width: 2.5rem;
@@ -937,17 +952,17 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(186 230 253 / var(--tw-border-opacity));
 }
-.bg-\[\#1F4860\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 72 96 / var(--tw-bg-opacity));
-}
-.bg-\[\#31D95E\] {
+.bg-brightGreen {
   --tw-bg-opacity: 1;
   background-color: rgb(49 217 94 / var(--tw-bg-opacity));
 }
-.bg-\[\#D6E9F3\] {
+.bg-cyan-50 {
   --tw-bg-opacity: 1;
-  background-color: rgb(214 233 243 / var(--tw-bg-opacity));
+  background-color: rgb(236 254 255 / var(--tw-bg-opacity));
+}
+.bg-darkBlue {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 72 96 / var(--tw-bg-opacity));
 }
 .bg-gray-eee {
   --tw-bg-opacity: 1;
@@ -956,6 +971,10 @@ video {
 .bg-green-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+.bg-lightAzure {
+  --tw-bg-opacity: 1;
+  background-color: rgb(214 233 243 / var(--tw-bg-opacity));
 }
 .bg-lightGreen {
   --tw-bg-opacity: 1;
@@ -972,6 +991,10 @@ video {
 .bg-sky-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(224 242 254 / var(--tw-bg-opacity));
+}
+.bg-sky-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(12 74 110 / var(--tw-bg-opacity));
 }
 .bg-slate-100\/75 {
   background-color: rgb(241 245 249 / 0.75);
@@ -1001,7 +1024,7 @@ video {
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
-.from-\[\#4285F4\] {
+.from-brightBlue {
   --tw-gradient-from: #4285F4 var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(66 133 244 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
@@ -1011,7 +1034,7 @@ video {
   --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
-.to-\[\#61A9D1\] {
+.to-softBlue {
   --tw-gradient-to: #61A9D1 var(--tw-gradient-to-position);
 }
 .bg-cover {
@@ -1022,6 +1045,9 @@ video {
 }
 .bg-bottom {
   background-position: bottom;
+}
+.bg-center {
+  background-position: center;
 }
 .bg-no-repeat {
   background-repeat: no-repeat;
@@ -1142,8 +1168,15 @@ video {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
 .font-bold {
   font-weight: 700;
+}
+.font-light {
+  font-weight: 300;
 }
 .font-medium {
   font-weight: 500;
@@ -1165,10 +1198,6 @@ video {
 }
 .tracking-widest {
   letter-spacing: 0.1em;
-}
-.text-\[\#255C7A\] {
-  --tw-text-opacity: 1;
-  color: rgb(37 92 122 / var(--tw-text-opacity));
 }
 .text-black {
   --tw-text-opacity: 1;
@@ -1194,9 +1223,14 @@ video {
   --tw-text-opacity: 1;
   color: rgb(78 78 78 / var(--tw-text-opacity));
 }
+.text-lightAzure {
+  --tw-text-opacity: 1;
+  color: rgb(214 233 243 / var(--tw-text-opacity));
+}
 .text-maroon {
   --tw-text-opacity: 1;
   color: rgb(99 5 5 / var(--tw-text-opacity));
+}
 .text-sky-700 {
   --tw-text-opacity: 1;
   color: rgb(3 105 161 / var(--tw-text-opacity));
@@ -1216,6 +1250,10 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(249 249 249 / var(--tw-text-opacity));
+}
+.text-yellow-800 {
+  --tw-text-opacity: 1;
+  color: rgb(133 77 14 / var(--tw-text-opacity));
 }
 .text-zinc-950\/40 {
   color: rgb(9 9 11 / 0.4);
@@ -1329,6 +1367,9 @@ body .background-layer::before {
     opacity: 0.3;
     mix-blend-mode: multiply;
   }
+body .nanakback{
+    background-image: url('../../public/images/coinback.png');
+  }
 body .cardImage{
     background-image: url('../../public/images/card.png');
   }
@@ -1338,6 +1379,10 @@ body .gurmukhi {
 body .gurmukhi * {
       font-family: 'Baloo Paaji 2' !important;
     }
+body .winbadge{
+    background-image: url('../../public/images/winShape.png');
+    height:25vh;
+  }
 body .brandon-grotesque {
     font-family: 'HvDTrial Brandon Grotesque' !important;
   }
