--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,6 +2,9 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+html,body{
+  height: 100%;
+}
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 229, 244, 253;
