--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -939,9 +939,6 @@ video {
 .overflow-y-auto {
   overflow-y: auto;
 }
-.overflow-y-scroll {
-  overflow-y: scroll;
-}
 .whitespace-pre-line {
   white-space: pre-line;
 }
@@ -1372,6 +1369,9 @@ video {
 }
 .ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+}
+html,body{
+  height: 100%;
 }
 :root {
   --foreground-rgb: 0, 0, 0;
