fix: basic gamePlay algo

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1215,6 +1215,10 @@ video {
 .italic {
   font-style: italic;
 }
+.ordinal {
+  --tw-ordinal: ordinal;
+  font-variant-numeric: var(--tw-ordinal) var(--tw-slashed-zero) var(--tw-numeric-figure) var(--tw-numeric-spacing) var(--tw-numeric-fraction);
+}
 .tracking-\[\.25rem\] {
   letter-spacing: .25rem;
 }
