--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -13,7 +13,7 @@ html,body,#root{
 
 
 * {
-  font-family: 'HvDTrial Brandon Grotesque';
+  font-family: 'Recoleta';
 }
 
 body {
@@ -150,6 +150,17 @@ body {
   .fade-to-complete {
     animation: fadeIn 0.5s ease-in-out;
   }
+
+  .loader {
+    width: 15px;
+    display: inline-block;
+    aspect-ratio: 4;
+    background: radial-gradient(circle closest-side,#1F4860 90%,#0000) 0/calc(100%/3) 100% space;
+    clip-path: inset(0 100% 0 0);
+    animation: loading 1s steps(4) infinite;
+  }
+
+  @keyframes loading {to{clip-path: inset(0 -34% 0 0)}}
 
   @keyframes jump {
     0%, 20%, 50%, 80%, 100% {
