--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -681,6 +681,9 @@ video {
 .inline-block {
   display: inline-block;
 }
+.inline {
+  display: inline;
+}
 .flex {
   display: flex;
 }
@@ -719,6 +722,9 @@ video {
 }
 .h-4\/5 {
   height: 80%;
+}
+.h-5 {
+  height: 1.25rem;
 }
 .h-6 {
   height: 1.5rem;
@@ -808,6 +814,9 @@ video {
 .w-48 {
   width: 12rem;
 }
+.w-5 {
+  width: 1.25rem;
+}
 .w-52 {
   width: 13rem;
 }
@@ -881,6 +890,15 @@ video {
 }
 .animate-ping {
   animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
+}
+@keyframes spin {
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+.animate-spin {
+  animation: spin 1s linear infinite;
 }
 .cursor-pointer {
   cursor: pointer;
@@ -1383,7 +1401,7 @@ html,body,#root{
   --background-end-rgb: 156, 201, 226;
 }
 * {
-  font-family: 'HvDTrial Brandon Grotesque';
+  font-family: 'Recoleta';
 }
 body {
   color: rgb(var(--foreground-rgb));
@@ -1495,7 +1513,17 @@ body #sortbox:checked ~ #sortboxmenu {
 body .fade-to-complete {
     animation: fadeIn 0.5s ease-in-out;
   }
+body .loader {
+    width: 15px;
+    display: inline-block;
+    aspect-ratio: 4;
+    background: radial-gradient(circle closest-side,#1F4860 90%,#0000) 0/calc(100%/3) 100% space;
+    clip-path: inset(0 100% 0 0);
+    animation: loading 1s steps(4) infinite;
+  }
 body {
+
+  @keyframes loading {to{clip-path: inset(0 -34% 0 0)}}
 
   @keyframes jump {
     0%, 20%, 50%, 80%, 100% {
