--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -606,10 +606,6 @@ video {
   margin-left: 1.25rem;
   margin-right: 1.25rem;
 }
-.mx-8 {
-  margin-left: 2rem;
-  margin-right: 2rem;
-}
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -629,6 +625,10 @@ video {
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+.my-7 {
+  margin-top: 1.75rem;
+  margin-bottom: 1.75rem;
 }
 .mb-10 {
   margin-bottom: 2.5rem;
@@ -784,6 +784,9 @@ video {
 .w-2 {
   width: 0.5rem;
 }
+.w-2\/3 {
+  width: 66.666667%;
+}
 .w-2\/5 {
   width: 40%;
 }
@@ -831,9 +834,6 @@ video {
 }
 .w-\[200px\] {
   width: 200px;
-}
-.w-\[45rem\] {
-  width: 45rem;
 }
 .w-auto {
   width: auto;
@@ -1131,10 +1131,6 @@ video {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
-.px-32 {
-  padding-left: 8rem;
-  padding-right: 8rem;
-}
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
@@ -1142,10 +1138,6 @@ video {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-}
-.py-20 {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
 }
 .pb-0 {
   padding-bottom: 0px;
