fix: add font-face for all fonts

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,15 +2,30 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+@font-face {
+  font-family: 'Recoleta';
+  src: url('../../public/fonts/Recoleta-RegularDEMO.otf');
+}
+
+@font-face {
+  font-family: 'Baloo Paaji 2';
+  src: url('../../public/fonts/BalooPaaji2-VariableFont_wght.ttf');
+}
+
+@font-face {
+  font-family: 'Brandon Grotesque';
+  src: url('../../public/fonts/HvDTrial_Brandon_Grotesque_regular-BF64a625c9311e1.otf');
+}
+
 html,body,#root{
   height: 100%;
 }
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 229, 244, 253;
   --background-end-rgb: 156, 201, 226;
 }
-
 
 * {
   font-family: 'Recoleta';
@@ -88,21 +103,22 @@ body {
     background-image: url('../../public/images/card.png');
   }
 
-  .gurmukhi {
-    font-family: 'Baloo Paaji 2' !important;
-    * {
-      font-family: 'Baloo Paaji 2' !important;
-    }
-  }
   .winbadge{
     background-image: url('../../public/images/winShape.png');
     height:25vh;
   }
 
   .brandon-grotesque {
-    font-family: 'HvDTrial Brandon Grotesque' !important;
+    font-family: 'Brandon Grotesque' !important;
     * {
-      font-family: 'HvDTrial Brandon Grotesque' !important;
+      font-family: 'Brandon Grotesque' !important;
+    }
+  }
+
+  .gurmukhi {
+    font-family: 'Baloo Paaji 2' !important;
+    * {
+      font-family: 'Baloo Paaji 2' !important;
     }
   }
 
@@ -133,9 +149,9 @@ body {
 
   form {
     input {
-      font-family: 'HvDTrial Brandon Grotesque';
+      font-family: 'Brandon Grotesque';
     }
-    font-family: 'HvDTrial Brandon Grotesque';
+    font-family: 'Brandon Grotesque';
   }
 
   .dark-blue {
