fix: add condition to filter out new words and questions

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: 'Recoleta';
-  src: url('../../public/fonts/Recoleta-RegularDEMO.otf');
+  src: url('../../public/fonts/Recoleta-Regular.ttf');
 }
 
 @font-face {
@@ -14,7 +14,7 @@
 
 @font-face {
   font-family: 'Brandon Grotesque';
-  src: url('../../public/fonts/Brandon_Grotesque_regular.otf');
+  src: url('../../public/fonts/BrandonGrotesque-Regular.ttf');
 }
 
 html,
