--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1545,7 +1545,7 @@ video {
 }
 @font-face {
   font-family: 'Recoleta';
-  src: url('../../public/fonts/Recoleta-RegularDEMO.otf');
+  src: url('../../public/fonts/Recoleta-Regular.ttf');
 }
 @font-face {
   font-family: 'Baloo Paaji 2';
@@ -1553,7 +1553,7 @@ video {
 }
 @font-face {
   font-family: 'Brandon Grotesque';
-  src: url('../../public/fonts/Brandon_Grotesque_regular.otf');
+  src: url('../../public/fonts/BrandonGrotesque-Regular.ttf');
 }
 html,
 body,
